<resources>

    <string name="app_name">燃气助手</string>
    <string name="contentDescription">图片</string>

    <string name="login">登	录</string>
    <string name="username">用户名</string>
    <string name="password">密\t 码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    
    <string name="main_title">功能选择</string>
    <string name="device_install_title">安装任务</string>
    <string name="device_repair_title">维修任务</string>
    <string name="get_config_file">查询</string>
    <string name="install_operation_title">条码扫描</string>
    <string name="install_operation_title_after_scan">卡表安装</string>
	<string name="repair_operation_title">故障判定</string>
	<string name="repair_detail_title">维修详情</string>
	<string name="repair_change_meter">换表操作</string>
	<string name="scan_barcode_operation">请点击上方图标开启条码扫描，扫描过程中请将扫描头对准卡表条码</string>
	<string name="upload_title">结果上传</string>
	<string name="mode_choose_title">模式选择</string>
</resources>
